add some license stuff with mit/bsd

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,7 @@ author = Ronny Pfannschmidt
 author_mail = Ronny.Pfannschmidt@gmx.de
 description = A utility to generate and manage drop in modules/scripts
 homepage=http://
+license=MIT/BSD
 
 packages=
     genscript
